Fixed display/visibility of close button
Button position may be off on Mac. Don't have access to a Mac to check right now.

--- a/Custom.css
+++ b/Custom.css
@@ -627,13 +627,13 @@
   color: #f8f8f8 !important;
 }
 
-#-webkit-web-inspector #toolbar div:first-child {
+
+
+#-webkit-web-inspector.show-toolbar-icons .toolbar-icon{
   display: none !important;
 }
 
-#-webkit-web-inspector #toolbar > div:first-child {
-  display: block !important;
-}
+
 
 #-webkit-web-inspector #main {
   top: 34px !important;
